feat: Phase 1 与 2 剩下的账，以及分发（v0.1.0）
一次提交，理由与上一批相同：改动落在同一批共享文件里（`Config`、`Cli`、`AgentHub`、`app.js`、
`index.html`、README），按项拆开需要把同一个文件的行切开，那样的历史读起来比一条说得清的更差。
每一项在下面，方向和代价都写清楚。

**Phase 0 的两处尾巴收完了。** 编译器插件的版本写了下来（3.15.0——就是本 wrapper 自己会绑定的那一个，
写下来是为了能核对，不是为了换版本）；而「文件在、断言没跑」这一整个家族都关掉了：六份各写一遍的
`appSource()` 收成一个 `WebSessionRowTest.appSourceOrSkip()`，读不到就抛 `TestAbortedException`——和
这个包此前为「缺少 node」钉下的规矩同一条。两处 `assertTrue(script != null, "app.js 必须可读")` 也换了：
它报的是「文件不在」，而这条测试想说的是「用例没跑」。

**1.2 子代理的截止时间终于有端到端证据。** 机制一直在（daemon 线程到点 `loop.abort()`），缺的是触发那
半边的证明——此前只有一句手写字符串喂给 `SubAgentReport.failed`。现在一个「正常时永不返回、被中断时立刻
退出」的提供方把整条链路跑通：700 毫秒的截止时间切断它、报告是 failed 且说出理由、写锁被放开。顺路修掉
一处自欺：报告用 `toMinutes()` 说上限，于是 45 秒被说成「0 分钟」——读起来像护栏坏了。

**1.3 用量账本改由循环自己记，于是抓到两个真问题。** 第一：终端一个 token 都不记（账本只在网页那条路
上被写），所以 `--max-total-tokens` 在 REPL 与 `-p` 里永远不触发。第二：压缩那次摘要请求的用量被整个
丢掉（监听器是 `event -> {}`），而用户为它付钱——每次压缩都让花费上限少算一笔。两者现在都进账本（摘要
不进 `steps`/`turns`：压缩不是对话里的一步，那由 `compactions` 表达）。另修两处口径：OpenAI 此前对每个
chunk 都转发一次 usage（某些网关每帧重复发累计用量，同一笔钱会被记上几十遍），现在一个回合只在流结束时
交一次；子代理没上报缓存时，命中率不再从「未上报」变成 0.0%。那条等号由一个八组往来 + 一次委派 + 一次
压缩的会话钉住：11828/1208/2988 与逐回合之和逐位相等，而三笔账互不相同，所以任何一种少算都落在不同的
差值上。

**1.4 定了：不裁剪。** 带上测量——本机最大的会话 2.4 MB / 3982 行，全部会话 11.5 MB，其中相当一部分是
账本行。文件就是记录，而上下文另有 `ContextBudget` 与 `/compact` 管着；真正该修的不是文件，是**读它的
人**（侧栏每次列会话都会把变更过的会话整个解码、正在写的那条每回合整份重解析），那件事连同启动与每回合
前缀的开销一起进了 4.5，因为它得先量出数字。

**1.5 一个真浏览器的冒烟测试。** 零依赖、零 npm：脚本自己找 Chrome、headless 起来、用 node 自带的全局
`WebSocket` 说 CDP，然后驱动**发布出去的那个页面**——等输入框与工具列表出现、真敲字、真按按钮、等回答
进 DOM；Java 那边起真服务器，断言回答里有磁盘上的哨兵（页面编不出那串东西）。跑通、skipped、failed 三
种结局都实测过。CI 的 Node 因此从 20 升到 22：按 20 装的话它在两个平台上都会变成 skipped，而「可选」退化
成「从没跑过」就不是可选了。

**2.2 四种线路。** 加上 Responses 与 Gemini，两条路都能选中（协议名当 `--provider`，或当作自定义定义的
`kind`）。Responses 显式 `store:false`——它的默认值是 true，而这里的叙事是会话在我的文件里。Gemini 的
`FunctionCall.args` 是对象不是字符串（双向转换 + 坏参数退路），`?alt=sse` 未核实，而且**不给默认模型**：
型号名换得太快，猜一个就是把一次配置错误变成一次莫名其妙的 404。设置面板的协议下拉与密钥变量建议都跟上
了（换协议只在该格还是默认值时换，不抹掉手打的）。

**2.4 一个角色可以被钉到自己的模型与档位上**，而「一次委派花了多少」写进了报告本